[package]
name = "showller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
anyhow = "1.0.59"
icalendar = "0.13.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
