[package]
name = "tv-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
futures = "0.3.21"
icalendar = "0.13.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "socks"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5.9"

anyhow = "1.0.59"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "fs"] }
actix-web = "4.1.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
